--- a/src/components/mdx/TraktGrid.astro
+++ b/src/components/mdx/TraktGrid.astro
@@ -1,6 +1,18 @@
 ---
 import { Image } from 'astro:assets'
-import { RateLimiter } from 'limiter'
+import { getCollection } from 'astro:content'
+
+type TraktItem = {
+  data: {
+    id: string
+    title: string
+    rating: number
+    year: number
+    last_watched_at: string
+    poster: string
+    imdb: string
+  }
+}
 
 const {
   gridMarginTop = 5,
@@ -11,134 +23,30 @@ const {
   type = 'movies',
 } = Astro.props
 
-const TRAKT_WATCHED_URL = `https://api.trakt.tv/users/sadmanca/watched/${type}`
-const TRAKT_RATINGS_URL = `https://api.trakt.tv/users/sadmanca/ratings/${type}`
-const TRAKT_CLIENT_ID = import.meta.env.TRAKT_CLIENT_ID
-const TMDB_API_KEY = import.meta.env.TMDB_API_KEY
-const LIMIT = 999999
+let items: TraktItem[] = []
 
-let watchedItems = []
-let ratings: never[] = []
-
-const limiter_tmdb = new RateLimiter({ tokensPerInterval: 50, interval: 'second' })
-const limiter_trakt = new RateLimiter({ tokensPerInterval: 1, interval: 'second' })
-
-async function fetchWithRetry(url: string, type: string, options = {}) {
-  let response;
-  let retries = 5;
-
-  while (retries > 0) {
-    if (type == 'trakt') {
-      await limiter_trakt.removeTokens(1);
-    } else {
-      await limiter_tmdb.removeTokens(1);
-    }
-    response = await fetch(url, options);
-
-    if (response.status !== 429) {
-      return response;
-    }
-
-    retries -= 1;
-    await new Promise((resolve) => setTimeout(resolve, 1000)); // Wait 1 second before retrying
-  }
-
-  throw new Error('Too many requests, please try again later.');
+if (type == 'shows') {
+  items = await getCollection(`trakt_watched_shows`)
+} else {
+  items = await getCollection(`trakt_watched_movies`)
 }
 
-let watchedResponse;
-
-try {
-  watchedResponse = await fetchWithRetry(TRAKT_WATCHED_URL, "trakt", {
-    headers: {
-      'Content-Type': 'application/json',
-      'trakt-api-version': '2',
-      'trakt-api-key': TRAKT_CLIENT_ID,
-    },
-  });
-} catch (error) {
-  console.error('Error fetching or parsing data from Trakt API:', error)
+if (filterYear) {
+  items = items.filter(
+    (item) =>
+      new Date(item.data.last_watched_at).getFullYear() === filterYear,
+  )
 }
 
-try {
-  if (!watchedResponse) {
-    throw new Error('watchedResponse is undefined')
-  }
-  if (!watchedResponse.ok) {
-    throw new Error(`HTTP error! status: ${watchedResponse.status}`)
-  }
-
-  const watchedData = await watchedResponse.json()
-
-  const ratingsResponse = await fetchWithRetry(TRAKT_RATINGS_URL, "trakt", {
-    headers: {
-      'Content-Type': 'application/json',
-      'trakt-api-version': '2',
-      'trakt-api-key': TRAKT_CLIENT_ID,
-    },
-  })
-
-  if (!ratingsResponse.ok) {
-    throw new Error(`HTTP error! status: ${ratingsResponse.status}`)
-  }
-
-  const ratingsData = await ratingsResponse.json()
-
-  ratings = ratingsData.reduce(
-    (
-      acc: { [x: string]: any },
-      item: { [x: string]: { ids: { tmdb: string | number } }; rating: any },
-    ) => {
-      acc[item[type.slice(0, -1)].ids.tmdb] = item.rating
-      return acc
-    },
-    {},
-  )
-
-  watchedItems = await Promise.all(
-    watchedData.slice(0, LIMIT).map(async (item: any, index: any) => {
-      const tmdbId = item[type.slice(0, -1)].ids.tmdb
-      let image_api_request
-      if (type == 'movies') {
-        image_api_request = `https://api.themoviedb.org/3/movie/${tmdbId}?api_key=${TMDB_API_KEY}&language=en-US`
-      } else {
-        image_api_request = `https://api.themoviedb.org/3/tv/${tmdbId}?api_key=${TMDB_API_KEY}&language=en-US`
-      }
-
-      const tmdbResponse = await fetchWithRetry(image_api_request, "tmdb")
-      const tmdbData = await tmdbResponse.json()
-
-      return {
-        title: item[type.slice(0, -1)].title,
-        year: item[type.slice(0, -1)].year,
-        last_watched_at: item.last_watched_at,
-        poster: `https://image.tmdb.org/t/p/w200${tmdbData.poster_path}`,
-        imdb: item[type.slice(0, -1)].ids.imdb,
-        rating: ratings[tmdbId] || 'N/A',
-      }
-    }),
-  )
-
-  if (filterYear) {
-    watchedItems = watchedItems.filter(
-      (item) => new Date(item.last_watched_at).getFullYear() === filterYear,
-    )
-  }
-
-  if (filterTitles.length > 0) {
-    watchedItems = watchedItems.filter((item) =>
-      filterTitles.includes(item.title),
-    )
-  }
-
-  watchedItems.sort(
-    (a, b) =>
-      new Date(b.last_watched_at).getTime() -
-      new Date(a.last_watched_at).getTime(),
-  )
-} catch (error) {
-  console.error('Error fetching or parsing data from Trakt API:', error)
+if (filterTitles.length > 0) {
+  items = items.filter((item) => filterTitles.includes(item.data.title))
 }
+
+items.sort(
+  (a, b) =>
+    new Date(b.data.last_watched_at).getTime() -
+    new Date(a.data.last_watched_at).getTime(),
+)
 
 function formatDate(dateString: any) {
   const monthNames = [
@@ -203,123 +111,114 @@ function formatDate(dateString: any) {
     class="grid grid-cols-3 gap-2 sm:grid-cols-6 md:grid-cols-7 lg:grid-cols-7 xl:grid-cols-7"
   >
     {
-      watchedItems.map(
-        (item: {
-          [x: string]: any
-          title: string
-          year: number
-          last_watched_at: string
-          poster: string
-          rating: number
-        }) => (
-          <div class="flex flex-col items-center">
-            <a
-              href={`https://www.imdb.com/title/${item.imdb}`}
-              class="h-36 w-24"
-              target="_blank"
-            >
-              <div class="relative h-full w-full">
-                <div
-                  class="placeholder rounded-lg bg-gray-300 dark:bg-gray-800"
-                  id={`placeholder-${item.imdb}`}
-                >
-                  <div class="h-12 w-12 rounded-3xl bg-gray-200 dark:bg-gray-700" />
-                </div>
-                <Image
-                  src={item.poster}
-                  alt={item.title}
-                  class="zoomable-image h-full w-full rounded-md object-cover"
-                  title={`${item.title}`}
-                  width={101}
-                  height={150}
-                  onload={`document.getElementById('placeholder-${item.imdb}').classList.add('hidden'); this.classList.add('loaded');`}
-                />
-              </div>
-            </a>
-            <div class={`mt-${titleMarginTop} text-center`}>
-              <a
-                href={`https://www.imdb.com/title/${item.imdb}`}
-                class="w-24 line-clamp-3 block text-xs font-semibold underline"
-                style="text-underline-offset: 2px;"
-                target="_blank"
-                rel="noopener noreferrer"
-                title={`${item.title}`}
-              >
-                {item.title} ({item.year})
-              </a>
-              <span
-                class="mt-1 block text-xs text-muted-foreground"
-                title="Last Watched"
-              >
-                Last Watched:
-                <br />
-                {formatDate(item.last_watched_at)}
-              </span>
+      items.map((item: TraktItem) => (
+        <div class="flex flex-col items-center">
+          <a
+            href={`https://www.imdb.com/title/${item.data.imdb}`}
+            class="h-36 w-24"
+            target="_blank"
+          >
+            <div class="relative h-full w-full">
               <div
-                class={`mb-${ratingMarginBottom} flex items-center justify-center`}
-                title={`Rating given: ${item.rating}/10`}
+                class="placeholder rounded-lg bg-gray-300 dark:bg-gray-800"
+                id={`placeholder-${item.data.imdb}`}
               >
-                {Array.from({ length: 5 }, (_, i) => {
-                  const fullStars = Math.floor(item.rating / 2)
-                  const hasHalfStar = item.rating % 2 >= 1
-                  const isFullStar = i < fullStars
-                  const isHalfStar = i === fullStars && hasHalfStar
+                <div class="h-12 w-12 rounded-3xl bg-gray-200 dark:bg-gray-700" />
+              </div>
+              <Image
+                src={item.data.poster}
+                alt={item.data.title}
+                class="zoomable-image h-full w-full rounded-md object-cover"
+                title={`${item.data.title}`}
+                width={101}
+                height={150}
+                onload={`document.getElementById('placeholder-${item.data.imdb}').classList.add('hidden'); this.classList.add('loaded');`}
+              />
+            </div>
+          </a>
+          <div class={`mt-${titleMarginTop} text-center`}>
+            <a
+              href={`https://www.imdb.com/title/${item.data.imdb}`}
+              class="line-clamp-3 block w-24 text-xs font-semibold underline"
+              style="text-underline-offset: 2px;"
+              target="_blank"
+              rel="noopener noreferrer"
+              title={`${item.data.title}`}
+            >
+              {item.data.title} ({item.data.year})
+            </a>
+            <span
+              class="mt-1 block text-xs text-muted-foreground"
+              title="Last Watched"
+            >
+              Last Watched:
+              <br />
+              {formatDate(item.data.last_watched_at)}
+            </span>
+            <div
+              class={`mb-${ratingMarginBottom} flex items-center justify-center`}
+              title={`Rating given: ${item.data.rating}/10`}
+            >
+              {Array.from({ length: 5 }, (_, i) => {
+                const fullStars = Math.floor(item.data.rating / 2)
+                const hasHalfStar = item.data.rating % 2 >= 1
+                const isFullStar = i < fullStars
+                const isHalfStar = i === fullStars && hasHalfStar
 
-                  return (
-                    <div class="relative h-4 w-4">
-                      {/* Full star */}
-                      {isFullStar && (
+                return (
+                  <div class="relative h-4 w-4">
+                    {/* Full star */}
+                    {isFullStar && (
+                      <svg
+                        class="text-black-500 absolute h-full w-full dark:text-white"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                      >
+                        <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
+                      </svg>
+                    )}
+
+                    {/* Half star */}
+                    {isHalfStar && (
+                      <>
+                        {/* Left half */}
                         <svg
                           class="text-black-500 absolute h-full w-full dark:text-white"
                           fill="currentColor"
                           viewBox="0 0 20 20"
+                          style="clip-path: inset(0 50% 0 0);"
                         >
                           <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
                         </svg>
-                      )}
-
-                      {/* Half star */}
-                      {isHalfStar && (
-                        <>
-                          {/* Left half */}
-                          <svg
-                            class="text-black-500 absolute h-full w-full dark:text-white"
-                            fill="currentColor"
-                            viewBox="0 0 20 20"
-                            style="clip-path: inset(0 50% 0 0);"
-                          >
-                            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
-                          </svg>
-                          {/* Right half */}
-                          <svg
-                            class="absolute h-full w-full text-gray-200 dark:text-gray-700"
-                            fill="currentColor"
-                            viewBox="0 0 20 20"
-                            style="clip-path: inset(0 0 0 50%);"
-                          >
-                            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
-                          </svg>
-                        </>
-                      )}
-
-                      {/* Empty star */}
-                      {!isFullStar && !isHalfStar && (
+                        {/* Right half */}
                         <svg
                           class="absolute h-full w-full text-gray-200 dark:text-gray-700"
                           fill="currentColor"
                           viewBox="0 0 20 20"
+                          style="clip-path: inset(0 0 0 50%);"
                         >
                           <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
                         </svg>
-                      )}
-                    </div>
-                  )
-                })}
-              </div>
+                      </>
+                    )}
+
+                    {/* Empty star */}
+                    {!isFullStar && !isHalfStar && (
+                      <svg
+                        class="absolute h-full w-full text-gray-200 dark:text-gray-700"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                      >
+                        <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
+                      </svg>
+                    )}
+                  </div>
+                )
+              })}
             </div>
           </div>
-        ),
-      )
+        </div>
+      ))
     }
   </div>
 </div>
